# file-sorter

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust-release.yml  rust.yml
rpm/: filesorter.spec
src/: app.rs  main.rs  settings.rs  utils.rs
