[package]
name = "filesorter"
version = "0.2.0"
authors = ["ElXreno <elxreno@gmail.com>"]
repository = "https://github.com/ElXreno/filesorter"
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "file",
    "sort"
]
categories = ["command-line-utilities"]
description = """
Utility for sorting files in directory writen in Rust
"""
edition = "2018"


# Profiles
[profile.release]
lto = true
panic = "abort"
codegen-units = 1


[dependencies]
directories = "2.0.2"
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0.53"
clap = "2.33.1"
chrono = "0.4.11"
