[package]
name = "filesorter"
version = "0.2.0"
authors = ["ElXreno <elxreno@gmail.com>"]
repository = "https://github.com/ElXreno/filesorter"
readme = "README.md"
license = "MPL-2.0"
keywords = [
    "file",
    "sort"
]
categories = ["command-line-utilities"]
description = """
Utility for sorting files in directory writen in Rust
"""
edition = "2018"


# Profiles
[profile.release]
lto = true
panic = "abort"
codegen-units = 1


[dependencies]
directories = "3.0.1"
serde = { version="1.0.115", features = ["derive"] }
serde_json = "1.0.57"
clap = "2.33.3"
chrono = "0.4.15"
